--- a/client/package.json
+++ b/client/package.json
@@ -19,13 +19,13 @@
     "style-loader": "^3.3.1",
     "webpack": "^5.66.0",
     "webpack-cli": "^4.9.1",
-    "workbox-webpack-plugin": "^6.5.3"
+    "webpack-pwa-manifest": "^4.3.0",
+    "workbox-webpack-plugin": "^6.2.4"
   },
   "dependencies": {
     "@popperjs/core": "^2.11.2",
     "bootstrap": "^5.1.3",
     "idb": "^7.0.0",
-    "regenerator-runtime": "^0.13.9",
-    "webpack-pwa-manifest": "^4.3.0"
+    "regenerator-runtime": "^0.13.9"
   }
 }
